# cpsc680-final

./: .flake8  .gitignore  README.md  main.sh  main2.sh  main_method2.sh  pyproject.toml  requirements.txt  simple.sh  simple2.sh
datasets/pokec/: main.py
models/: pokec_n.pt  pokec_z.pt
notebooks/: Attempt 1.ipynb
scripts/: combined.sh  combined_estimate.sh  edge_1.sh  edge_2.sh  node_adversarial.sh  node_adversarial_estimate.sh  node_simple.sh  node_simple_embedding.sh  vanilla_aware.sh  vanilla_unaware.sh
src/: argparser.py  combined.py  edge_gnn.py  eval.py  method1.py  method2.py  metrics.py  node_gnn.py  utils.py  vanilla.py  vanilla_gnn.py
src/datasets/: __init__.py  aware_german.py  bail.py  credit.py  dataset_stats.py  german.py  pokec.py  shared.py
src/eval/: argparser.py  fairness.py  homophily.py  main.py
src/metrics/: bias.py
src/models/: vanilla_pred.py
src/node/: argparser.py  mean_adjust.py  model.py  pca_adjust.py  simple.py  simple_embedding.py  simple_pca.py  train.py
src/vanilla/: argparser.py  edge_gnn.py  node_gnn.py  train.py
