[tool.poetry]
name = "cpsc680-final"
version = "0.1.0"
description = ""
authors = ["Abhijit Gupta <avgupta456@gmail.com>"]
readme = "README.md"
packages = [{include = "cpsc680_final"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
torch = "^1.13.1"
torchvision = "^0.14.1"
torchaudio = "^0.13.1"
torch-scatter = { version = "2.1.0", source="torch"}
torch-sparse = { version = "0.6.16", source="torch"}
torch-cluster = { version = "1.6.0", source="torch"}
torch-spline-conv = { version = "1.2.1", source="torch"}
torch-geometric = "^2.2.0"
pandas = "^1.5.3"

[[tool.poetry.source]]
name = "torch"
url = "https://data.pyg.org/whl/torch-1.13.0+cpu.html"
secondary = true


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
